<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="28dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@color/white"
        android:padding="28dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/resume_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/full_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/role" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/city"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/contact_information_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/email_address_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/email_address"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/phone_number_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/phone_number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/location_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_linkedin"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/full_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textColor="@color/colorAccent2"
                    android:textSize="12sp"
                    android:text="@string/linkedin_account_username"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_link"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="19dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_github"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/full_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textColor="@color/colorAccent2"
                    android:textSize="12sp"
                    android:text="@string/github_account_username"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_link"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>